--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 
+rootProject.name='kotlin-auto-fill'
 kotlin.code.style = official
 kotlin.stdlib.default.dependency = false
-
 pluginVersion = 2022.3
 
 platformName = kotlin-auto-fill
