new support version(intellij platform 24.3 latest) and fix some property

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 rootProject.name='kotlin-auto-fill'
 kotlin.code.style = official
 kotlin.stdlib.default.dependency = false
+pluginName = kotlin-auto-fill
 pluginVersion = 2022.3
 
 platformName = kotlin-auto-fill
