[feature] update depends module on plugin.xml

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -32,4 +32,5 @@
              implementationClass="io.autofill.kotlin.kotlinautofill.inspection.K2Inspection"
         />
     </extensions>
+    <depends>org.jetbrains.kotlin</depends>
 </idea-plugin>
